[package]
name = "alexflipnote"
description = "A rust wrapper for the AlexFlipnote API"
version = "0.1.0"
authors = ["Tejas Agarwal <togedemaru.1707@gmail.com>"]
edition = "2018"
homepage = "https://github.com/tejasag/alexflipnote.rs"
keywords = ["rust", "alex", "flipnote", "api", "wrapper"]
repository = "https://github.com/tejasag/alexflipnote.rs.git"
include = ["src/**/*", "LICENSE", "README.md"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.0", features=["blocking", "json"]}
serde_json = "1.0.61"
serde = {version = "1.0.123", features=["derive"]}
serde_derive = {version = "1.0.123"}
bytes = "1.0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
