[package]
name = "tests"
version = "0.1.0"
authors = ["Tejas Agarwal <togedemaru.1707@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
alexflipnote = { path="../" }
dotenv = "0.15.0"
bytes = "1.0.1"